Added heading background image

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -4,6 +4,7 @@
     font-weight: bold;
     color: khaki;
     text-align: center;
+    background-image: url("/Volumes/Gyanesh's HardDrive/Gyanesh's Documents/MyProjects/Dasmoto's Arts & Crafts/resources/pattern.jpeg");
 }
 
 .categories{
